
	* Improved table layout for homogenous mode to handle not column
        or row multiple sized table better.

2011-05-04  Jiyoun Park

	* OpenGL binary shader ability to cache (save and load back
        later) to avoid re-compiling shaders on every time an app starts and
        uses the GL engine. Faster startup time.

2011-05-04 Tom Hacohen (TAsn)

	* Textblock: Do standard compliant line breaks. In order to achieve
	  that we now statically link against liblinebreak (available in
	  src/static_deps/liblinebreak). It's usage can be disabled using the
	  configure flag: "--disable-liblinebreak"; Disabling it will activate
	  the fallback line breaking methods which are not very correct, but
	  are possibly faster. I haven't noticed any difference between the
	  two speed-wise, but there probably are in some rare cases.

2011-05-06 Cedric Bail

	* Don't try all image loader when user is pointing them on a directory.

2011-05-11  Carsten Haitzler (The Rasterman)

	* Fix problem with Evas engine not calling pre/post swap functions
        in the GL engine when using EGL/OpenGL-ES2
        * Fix SVG loader 2 phase loader having differing scale down code
        for first and 2nd phase. Resulted in crash when loading some SVGs

2011-05-11 Tom Hacohen (TAsn)

	* Textblock: Added evas_textblock_node_format_list_get. This is very
	  useful for edje_entry that uses anchors in the text.

2011-05-12  Carsten Haitzler (The Rasterman)

	* Add smart instance usage count get function for ability to free
        data from memory from a smart class if needed.

2011-05-12 Brian Wang

	* Textblock: fix segfault with evas_textblock_cursor_content_get

2011-05-12  Carsten Haitzler (The Rasterman)

	* Add a smart "Grid" layout object that lays out objects in a regular
        "virtual resolution" grid (eg 100x100) so you can lay them out
        as a "scaled percentage" of the virtual resolution. virtual
        resolution is defineable as is the geometry of each member.
